src/norx/config.nim


proc orxConfig_AppendListString*(zKey: cstring; azValue: cstringArray;
                                u32Number: orxU32): orxSTATUS {.cdecl,
    importc: "orxConfig_AppendListString", dynlib: libORX.}
## * Gets key count of the current section
##  @return Key count of the current section if valid, 0 otherwise
##

proc orxConfig_GetKeyCount*(): orxU32 {.cdecl, importc: "orxConfig_GetKeyCount",
                                     dynlib: libORX.}
## * Gets key for the current section at the given index
##  @param[in] _u32KeyIndex      Index of the desired key
##  @return orxSTRING if exist, orxSTRING_EMPTY otherwise
##

proc orxConfig_GetKey*(u32KeyIndex: orxU32): cstring {.cdecl,
    importc: "orxConfig_GetKey", dynlib: libORX.}
## * @}
